--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   },
   "scripts": {
     "clean": "rimraf ./dist",
-    "compile": "npm run clean && npm run test && webpack --mode production",
-    "compile:dev": "npm run clean && npm run test && webpack --mode development",
-    "build": "npm run compile",
-    "build:dev": "npm run compile:dev && npm run postbuild",
+    "compile": "npm run clean && webpack --mode production",
+    "compile:dev": "npm run clean && webpack --mode development",
+    "build": "npm run compile && npm run postbuild",
+    "build:dev": "npm run compile:dev",
     "postbuild": "npm run package-extension -- --rev-version",
-    "package-extension": "tfx extension create --manifest-globs azure-devops-extension.json src/Samples/**/*.json",
-    "publish-extension": "tfx extension publish --manifest-globs azure-devops-extension.json src/Samples/**/*.json",
-    "publish-extension:dev": "tfx extension publish --manifest-globs azure-devops-extension-dev.json src/Samples/**/*.json",
+    "postbuild:dev": "npm run package-extension:dev -- --rev-version",
+    "package-extension": "tfx extension create --manifest-globs azure-devops-extension.json src/**/*.json",
+    "package-extension:dev": "tfx extension create --manifest-globs azure-devops-extension-dev.json src/**/*.json",
+    "publish-extension": "tfx extension publish --manifest-globs azure-devops-extension.json src/**/*.json",
+    "publish-extension:dev": "tfx extension publish --manifest-globs azure-devops-extension-dev.json src/**/*.json",
     "test": "cross-env TEST_REPORT_FILENAME=test-results.xml jest --verbose",
     "start:dev": "webpack-dev-server --mode development"
   },
